==> h4yn0nnym0u5e/TFT_eSPI/Processors/TFT_eSPI_Teensy4.c <==
#define DIRECT_WRITE_LOW(base, mask)    (*((base)+34) = (mask))
#define DIRECT_WRITE_HIGH(base, mask)   (*((base)+33) = (mask))

void TFT_eSPI::pushBlock(uint16_t color, uint32_t len){

  while (len>1) {tft_Write_32D(color); len-=2;}
  if (len) {tft_Write_16(color);}
}

uint8_t TFT_eSPI::readByte(void)
{
  uint8_t b = 0;

  busDir(0, INPUT);
  digitalWrite(TFT_RD, LOW);

  b |= digitalRead(TFT_D0) << 0;
  b |= digitalRead(TFT_D1) << 1;
  b |= digitalRead(TFT_D2) << 2;
  b |= digitalRead(TFT_D3) << 3;
  b |= digitalRead(TFT_D4) << 4;
  b |= digitalRead(TFT_D5) << 5;
  b |= digitalRead(TFT_D6) << 6;
  b |= digitalRead(TFT_D7) << 7;

  digitalWrite(TFT_RD, HIGH);
  busDir(0, OUTPUT); 

  return b;
}

void TFT_eSPI::pushBlock(uint16_t color, uint32_t len){

  if(len) { tft_Write_16(color); len--; }
  while(len--) {WR_L; WR_H;}
}

void TFT_eSPI::pushBlock(uint16_t color, uint32_t len)
{
  // Split out the colours
  uint8_t r = (color & 0xF800)>>8;
  uint8_t g = (color & 0x07E0)>>3;
  uint8_t b = (color & 0x001F)<<3;

  while ( len-- ) {tft_Write_8(r); tft_Write_8(g); tft_Write_8(b);}
}

void TFT_eSPI::pushBlock(uint16_t color, uint32_t len){

  while ( len-- ) {tft_Write_16(color);}
}

void TFT_eSPI_Teensy4_SPI_with_DMA::initDMA(void) 
{ 
  if (nullptr == pDMA)
    pDMA = new DMAChannel;
  if (nullptr != pDMA)
  {
    pDMA->begin();
    if (pSPI == &SPI)
      pDMA->attachInterrupt(SPI_DMA_ISR);
    else if (pSPI == &SPI1)
      pDMA->attachInterrupt(SPI1_DMA_ISR);
    if (pSPI == &SPI2)
      pDMA->attachInterrupt(SPI2_DMA_ISR);
  }
}

bool TFT_eSPI_Teensy4_SPI_with_DMA::dmaBusy(void) 
{ 
  return (!DMAidle && !pDMA->complete())
      || !SPItransmitComplete(); 
}

bool TFT_eSPI::initDMA(bool ctrl_cs) 
{ 
  spi_dma.initDMA(); 
  DMA_Enabled=true; 
  return true; 
}

bool TFT_eSPI::dmaBusy(void) 
{ 
  return spi_dma.dmaBusy(); 
}

void TFT_eSPI::dmaWait(void) 
{ 
  bool inISR = (SCB_ICSR & SCB_ICSR_VECTACTIVE_Msk) != 0;
  while (dmaBusy())
    if (!inISR)
      yield();
  if (spi_dma.cleanupNeeded())
  {
    spi_dma.finishDMAtransfer();
    spi_dma.fixupSPIafterDMA();
    //end_tft_write();
  }
}

void TFT_eSPI::pushPixelsDMA(uint16_t* image, // pointer to image data
                             uint32_t len)    // length of image data in pixels
{
  dmaWait(); // should take no time as long as previous DMA is finished

  spi_dma.prepDMAtransfer(image, len, *this);  // get DMA channel ready

  //begin_tft_write();          // this modifies the SPI settings!
  spi_dma.prepSPIforDMA();    // get SPI hardware ready
  spi_dma.startDMAtransfer(); 
}

void TFT_eSPI::pushImageDMA(int32_t x, int32_t y, int32_t w, int32_t h, 
                            uint16_t* image, uint16_t* buffer)
{
  int pixels=w*h;

  // just straight image for now - existing code
  // deals with clipping and swapped bytes, but
  // appears to be buggy...
  if (nullptr == buffer)
    buffer = image;
  else
    memcpy(buffer, image, pixels * sizeof *buffer);
  spi_dma.echoTCR = true;
  setAddrWindow(x,y,w,h);
  spi_dma.echoTCR = false;
  Serial.println();
  pushPixelsDMA((uint16_t*) buffer,pixels);
}
